--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Havens Coffee</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="../images/haven2.jpg"alt="Coffee Shop" Width="100%" >
+    <img href="haven2.jpg"alt="Coffee Shop" Width="100%" >
 </a>
 </head>
 <body>
